--- a/others/005 一些对比.md
+++ b/others/005 一些对比.md
@@ -9,34 +9,16 @@
 | **可变性**  | 合约不变则ABI不变                                          | 每次调用根据参数不同而变化                    | 部署后不可变                               |
 | **可见性**  | 公开(需提供给调用者)                                       | 交易中可见                                    | 链上可查询(通过eth_getCode)                |
 
-### ```LSD、LST、LSP```
-| 对比维度       | LSD (Liquid Staking Derivative)       | LST (Liquid Staking Token)          | LSP (Liquid Staking Provider)      |
-|----------------|---------------------------------------|-------------------------------------|------------------------------------|
-| **中文全称**   | 流动性质押衍生品                      | 流动性质押代币                     | 流动性质押服务提供商               |
-| **本质属性**   | 金融衍生品                            | 区块链代币                         | 服务平台/协议                     |
-| **核心功能**   | 1. 质押资产凭证<br>2. 释放流动性      | 1. 质押资产凭证<br>2. 交易媒介      | 1. 节点运营<br>2. 发行LSD/LST      |
-| **发行主体**   | 由LSP发行                             | 由LSP发行                          | 协议自主发行                      |
-| **典型代表**   | stETH (Lido)<br>rETH (Rocket Pool)    | stETH<br>rETH                       | Lido Finance<br>Rocket Pool        |
-| **是否可交易** | ✅ 二级市场流通                       | ✅ 二级市场流通                     | ❌ 不可交易                        |
-| **用户交互**   | 通过DeFi协议使用                      | 作为代币直接使用                   | 通过平台质押资产                  |
-| **收益来源**   | 质押收益 + DeFi组合收益               | 质押收益 + 代币增值                | 服务手续费                        |
-| **技术标准**   | 兼容ERC-20等代币标准                  | 必须符合ERC-20等标准               | 智能合约+节点基础设施             |
-| **风险类型**   | 1. 智能合约风险<br>2. 脱锚风险        | 1. 代币波动风险<br>2. 流动性风险    | 1. 协议中心化风险<br>2. Slash风险  |
-
-### 质押、再质押
-| 对比维度         | 质押 (Staking)                                    | 重新质押 (Re-staking)             |
-|------------------|---------------------------------------------------|-------------------------------|
-| **定义**         | 将代币锁定以维护主链安全并获取基础收益              | 将已质押资产（如LSD）二次质押到其他协议获取叠加收益   |
-| **资产状态**     | 原生代币（如ETH）或流动性质押代币（LSD）           | 质押凭证（如stETH）、LP代币或其他衍生品       |
-| **收益结构**     | 单层收益（主链质押奖励，APY 3-5%）                | 双层收益（主链奖励 + 协议补贴，APY可提升2-10%） |
-| **参与门槛**     | 需32 ETH（独立节点）或任意金额（质押池）           | 需持有质押凭证（如stETH）并连接智能合约        |
-| **安全性贡献**   | 仅服务于主链共识（如以太坊）                      | 扩展至其他协议/链（如DA层、预言机网络）         |
-| **流动性**       | 传统质押锁定资产；LSD可流通（如stETH）             | 多数协议锁定资产，部分支持流动性再质押           |
-| **典型协议**     | Lido、Rocket Pool、交易所质押                      | EigenLayer、Kelp DAO、Babylon   |
-| **主要风险**     | Slash罚没、市场波动                                | 智能合约漏洞、叠加Slash风险、协议代币贬值       |
-| **资本效率**     | 1倍利用率                                         | N倍利用率（多协议复用安全性）               |
-| **操作复杂度**   | 中（需节点运维或选择质押池）                      | 高（需管理多协议交互和风险对冲）              |
-| **创新性**       | 基础共识层                                        | 模块化区块链的安全共享经济                 |
+### ```permit、permit2```
+| 对比维度 | `permit` (EIP-2612) | `Permit2` |
+| --- | --- | --- |
+| **标准** | 内置于代币合约 (EIP-2612) | 独立合约（Uniswap 提出） |
+| **适用范围** | 仅限支持 `permit` 的代币 | 所有 ERC-20 代币 |
+| **授权类型** | 单一代币、单一 spender | 支持批量代币、多个 spender、限时授权 |
+| **签名复杂度** | 简单（EIP-712 标准） | 更复杂（支持多种授权结构） |
+| **Gas 成本** | 较低（直接修改代币合约状态） | 稍高（需要调用外部 `Permit2` 合约） |
+| **用例** | 简单授权场景（如单个 DeFi 协议） | 复杂场景（如 Uniswap 的批量交易） |
+| **生态支持** | 广泛，但依赖代币实现 | Uniswap 等主流协议推动，逐渐普及 |
 
 ### ```UniswapV2、Sushiswap```
 | 对比维度          | Uniswap V2 (2020年5月发布)                | Sushiswap (2020年8月发布)               |
@@ -52,16 +34,34 @@
 | **风险模型**      | 仅智能合约风险                            | 代币通胀风险+团队套现风险                 |
 | **TVL峰值**       | $3B (2020年9月被吸血前)                   | $1.5B (2020年9月迁移潮)                  |
 
-### ```permit、permit2```
-| 对比维度 | `permit` (EIP-2612) | `Permit2` |
-| --- | --- | --- |
-| **标准** | 内置于代币合约 (EIP-2612) | 独立合约（Uniswap 提出） |
-| **适用范围** | 仅限支持 `permit` 的代币 | 所有 ERC-20 代币 |
-| **授权类型** | 单一代币、单一 spender | 支持批量代币、多个 spender、限时授权 |
-| **签名复杂度** | 简单（EIP-712 标准） | 更复杂（支持多种授权结构） |
-| **Gas 成本** | 较低（直接修改代币合约状态） | 稍高（需要调用外部 `Permit2` 合约） |
-| **用例** | 简单授权场景（如单个 DeFi 协议） | 复杂场景（如 Uniswap 的批量交易） |
-| **生态支持** | 广泛，但依赖代币实现 | Uniswap 等主流协议推动，逐渐普及 |
+### ```LSD、LST、LSP```
+| 对比维度       | LSD (Liquid Staking Derivative)       | LST (Liquid Staking Token)          | LSP (Liquid Staking Provider)      |
+|----------------|---------------------------------------|-------------------------------------|------------------------------------|
+| **中文全称**   | 流动性质押衍生品                      | 流动性质押代币                     | 流动性质押服务提供商               |
+| **本质属性**   | 金融衍生品                            | 区块链代币                         | 服务平台/协议                     |
+| **核心功能**   | 1. 质押资产凭证<br>2. 释放流动性      | 1. 质押资产凭证<br>2. 交易媒介      | 1. 节点运营<br>2. 发行LSD/LST      |
+| **发行主体**   | 由LSP发行                             | 由LSP发行                          | 协议自主发行                      |
+| **典型代表**   | stETH (Lido)<br>rETH (Rocket Pool)    | stETH<br>rETH                       | Lido Finance<br>Rocket Pool        |
+| **是否可交易** | ✅ 二级市场流通                       | ✅ 二级市场流通                     | ❌ 不可交易                        |
+| **用户交互**   | 通过DeFi协议使用                      | 作为代币直接使用                   | 通过平台质押资产                  |
+| **收益来源**   | 质押收益 + DeFi组合收益               | 质押收益 + 代币增值                | 服务手续费                        |
+| **技术标准**   | 兼容ERC-20等代币标准                  | 必须符合ERC-20等标准               | 智能合约+节点基础设施             |
+| **风险类型**   | 1. 智能合约风险<br>2. 脱锚风险        | 1. 代币波动风险<br>2. 流动性风险    | 1. 协议中心化风险<br>2. Slash风险  |
+
+### 质押、重新质押(即，再质押)
+| 对比维度         | 质押 (Staking)                                    | 重新质押 (Re-staking)             |
+|------------------|---------------------------------------------------|-------------------------------|
+| **定义**         | 将代币锁定以维护主链安全并获取基础收益              | 将已质押资产（如LSD）二次质押到其他协议获取叠加收益   |
+| **资产状态**     | 原生代币（如ETH）或流动性质押代币（LSD）           | 质押凭证（如stETH）、LP代币或其他衍生品       |
+| **收益结构**     | 单层收益（主链质押奖励，APY 3-5%）                | 双层收益（主链奖励 + 协议补贴，APY可提升2-10%） |
+| **参与门槛**     | 需32 ETH（独立节点）或任意金额（质押池）           | 需持有质押凭证（如stETH）并连接智能合约        |
+| **安全性贡献**   | 仅服务于主链共识（如以太坊）                      | 扩展至其他协议/链（如DA层、预言机网络）         |
+| **流动性**       | 传统质押锁定资产；LSD可流通（如stETH）             | 多数协议锁定资产，部分支持流动性再质押           |
+| **典型协议**     | Lido、Rocket Pool、交易所质押                      | EigenLayer、Kelp DAO、Babylon   |
+| **主要风险**     | Slash罚没、市场波动                                | 智能合约漏洞、叠加Slash风险、协议代币贬值       |
+| **资本效率**     | 1倍利用率                                         | N倍利用率（多协议复用安全性）               |
+| **操作复杂度**   | 中（需节点运维或选择质押池）                      | 高（需管理多协议交互和风险对冲）              |
+| **创新性**       | 基础共识层                                        | 模块化区块链的安全共享经济                 |
 
 ### 跨链兑换
 | **分类维度**       | **高频刚需场景**                                                                 | **低频场景**                                                                 |
