some type setting

--- a/courses/049 四大代理模式对比.md
+++ b/courses/049 四大代理模式对比.md
@@ -1,11 +1,11 @@
 #### 应用场景
-- ![](../images/日期/PixPin_20250423_000435.png "")
+- ![](../images/PixPin_代理模式对比1.png "")
 
 #### 技术指标
-- ![](../images/日期/PixPin_20250423_000442.png "")
+- ![](../images/PixPin_代理模式对比2.png "")
 
 #### 安全性
-- ![](../images/日期/PixPin_20250423_000448.png "")
+- ![](../images/PixPin_代理模式对比3.png "")
 
 #### 总结
-- ![](../images/日期/PixPin_20250423_000455.png "")
+- ![](../images/PixPin_代理模式对比4.png "")
