--- a/courses/007 继承.md
+++ b/courses/007 继承.md
@@ -89,3 +89,47 @@ contract Son is Father, Mother {
 - ```super.hello()```的机制，来源于继承的顺序！
 
 //////////////////////////////////////////////////////////////////////
+
+#### 接口与继承的特殊示例
+```
+    // SPDX-License-Identifier: MIT
+    pragma solidity ^0.8.0;
+    
+    // 接口定义
+    interface IGreeter {
+        function greeting() external view returns (string memory);
+    }
+    
+    // 父合约
+    contract Greeter is IGreeter {
+        // 状态变量与接口函数同名
+        string public greeting = "Hello from Storage";
+        
+        // 实现接口函数
+        function greeting() external pure override returns (string memory) {
+            return "Hello from Function";
+        }
+    }
+    
+    // 子合约
+    contract HelloWorld is Greeter {
+        // 继承自 Greeter，包含 greeting 变量和函数
+    }
+    
+    // 测试合约
+    contract GreeterTest {
+        function testGreeting() public {
+            HelloWorld hello = new HelloWorld();
+            
+            // 情况1：访问 contract Greeter 的 function greeting()
+            string memory fromStorage = hello.greeting();  // 返回 "Hello from Function"
+            
+            // 情况2：访问 interface IGreeter 的 function greeting()
+            IGreeter greeter = IGreeter(address(hello));
+            string memory fromInterface = greeter.greeting();  // 返回 "Hello from Function"
+            
+            // 情况3：访问 contract Greeter 的 string public greeting
+            // string memory storageValue = hello.greeting;  // 编译错误
+        }
+    }
+```
