--- a/courses/008 接收以太币.md
+++ b/courses/008 接收以太币.md
@@ -1,45 +1,53 @@
-
 #### 以太币的单位：
 ```
-Wei(最小的计量单位)
-Kwei(Babbage) = 10^3  Wei           // Charles Babbage 他是早期计算机设计的先驱之一。
-Mwei(Lovelace) = 10^6 Wei           // Ada Lovelace 她被认为是世界上第一位程序员。
-Gwei(Shannon) = 10^9 Wei            // Claude Shannon 他是信息论的创始人。
-Microether(Szabo) = 10^12 Wei       // Nick Szabo 他是一位计算机科学家、法律学者和密码学家，也因为智能合约的概念而闻名。
-Milliether(Finney) = 10^15 Wei      // Hal Finney 他是比特币的早期采用者和支持者，也是密码学领域的重要人物。
-Ether = 10^18 Wei
-
-记忆方式：看门狗(K - M - G)
+    Wei(最小的计量单位)
+    Kwei(Babbage) = 10^3  Wei           // Charles Babbage 他是早期计算机设计的先驱之一。
+    Mwei(Lovelace) = 10^6 Wei           // Ada Lovelace 她被认为是世界上第一位程序员。
+    Gwei(Shannon) = 10^9 Wei            // Claude Shannon 他是信息论的创始人。
+    Microether(Szabo) = 10^12 Wei       // Nick Szabo 他是一位计算机科学家、法律学者和密码学家，也因为智能合约的概念而闻名。
+    Milliether(Finney) = 10^15 Wei      // Hal Finney 他是比特币的早期采用者和支持者，也是密码学领域的重要人物。
+    Ether = 10^18 Wei
+    
+    记忆方式：看门狗(K - M - G)
 ```
 
-#### receive()函数：
-- 固定形式：```receive() external payable { ... }```
-- 发出方，使用transfer、send 或 call 进行转账
-- 不能有任何的参数，不能返回任何值，必须包含external和payable
-- 关于调用：部署时直接转入以太币，不会触发receive()。(有兴趣可以直接测试，嘿嘿!)
-- 关于调用：只会在合约部署完毕结束后，接收到以太币，且msg.data为空时，才被触发。
-- 关于gas：调用者可以提供的最大 gas 量为 2300 gas。这是为了确保 receive() 函数的执行不会过于复杂，避免潜在的重入攻击或其他问题。
+------------------------------------------------------------------------------------------------------------------------
 
+#### 以下为 4 种方式，"让目标合约能够接收以太"
+- 目标合约定义```receive()```函数：
+  - 固定形式：```receive() external payable { ... }```
+  - 发出方，配合使用```transfer、send、call``` 进行转账
+  - 不能有任何的参数，不能返回任何值，必须包含```external 和 payable```
+  - 关于调用：部署时直接转入以太币，不会触发```receive()```。(有兴趣可以直接测试，嘿嘿!)
+  - 关于调用：只会在合约部署完毕结束后，接收到以太币，且```msg.data```为空时，才被触发。
+  - 关于gas：调用者可以提供的最大 ```gas``` 量为 ```2300 gas```。这是为了确保 ```receive()``` 函数的执行不会过于复杂，避免潜在的重入攻击或其他问题。
+- 目标合约定义```fallback()```函数：
+  - 固定形式1：```fallback() external payable { ... }```
+  - 固定形式2：```fallback() external { ... }```
+  - 发出方，配合使用```transfer、send、call``` 进行转账
+  - 不能有任何的参数，不能返回任何值，必须包含```external```
+  - 关于调用：部署时直接转入以太币，不会触发```fallback()```。(有兴趣可以直接测试，嘿嘿!)
+  - 关于调用：会在合约部署完毕结束后，接收到以太币，且```msg.data```不为空时，会被触发。
+  - 关于调用：会在合约部署完毕结束后，接收到以太币，且```msg.data```为空时，但```receive()```不存在的时候，会被触发。
+  - 关于调用：调用合约不存在的函数时，也会被触发。（使用接口嵌套类似于的方法，可以发起这种"调用不存在的函数"）
+  - 关于gas：调用者通常会使用```call```触发```fallback```，但仍然建议不要过于复杂，以免突破```gas```限制。
+- 目标合约定义"普通函数"
+  - 函数体使用```payable```修饰
+  - 即使，合约内没有定义```receive或fallback```，也能接收以太币
+  - 关于调用：使用普通函数进行转账时候，不会触发目标合约定义了标准的```receive() 或 fallback()```。
+  - 示例：```function foo(uint256 _value) public payable```
+- 其他合约自毁前，把目标合约地址作为接收方，强制转账
+  - 其他合约调用自身```attack()```的同时，携带以太(或，提前存入以太)。
+  - 不论目标合约是否定义了```receive() 或 fallback()```函数，都可以强制转账成功。
+  ```
+    function attack() public payable {
+        address payable addr = payable(address(targetContract));
+        selfdestruct(addr);
+    }
+  ```
 
-#### fallback()函数：
-- 固定形式1：```fallback() external payable { ... }```
-- 固定形式2：```fallback() external { ... }```
-- 发出方，使用transfer、send 或 call 进行转账
-- 不能有任何的参数，不能返回任何值，必须包含external
-- 关于调用：部署时直接转入以太币，不会触发fallback()。(有兴趣可以直接测试，嘿嘿!)
-- 关于调用：会在合约部署完毕结束后，接收到以太币，且msg.data不为空时，会被触发。
-- 关于调用：会在合约部署完毕结束后，接收到以太币，且msg.data为空时，但receive()不存在的时候，会被触发。
-- 关于调用：调用合约不存在的函数时，也会被触发。（使用接口嵌套类似于的方法，可以发起这种"调用不存在的函数"）
-- 关于gas：调用者通常会使用call触发fallback，但仍然建议不要过于复杂，以免突破gas限制。
+------------------------------------------------------------------------------------------------------------------------
 
-
-#### 普通函数
-- 函数体使用payable修饰
-- 即使，合约内没有定义receive或fallback，也能接收以太币
-- 关于调用：使用普通函数进行转账时候，即使目标合约定义了标准的```receive 或 fallback```，也不会触发它们。
-- 示例：```function foo(uint256 _value) public payable```
-
-
-#### 其他：
-- 原生 ETH（以太币）的地址(以太坊地址常量)：
+#### 其他说明：
+- 原生 ETH（以太币）的地址(以太坊地址常量)如下：
 - ```address public constant ethAddress = address(0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE);```
