--- a/others/005 一些对比.md
+++ b/others/005 一些对比.md
@@ -95,3 +95,14 @@
 | **成本构成**        | 固定Gas费                                                                        | Gas费+滑点损耗+协议手续费                                                       |
 | **数据佐证**        | WBTC流通量>20万枚<br>Layer2桥接TVL超$10B                                             | CEX占跨资产交易90%+                                                           |
 | **未来趋势**        | 需求持续增长（多链生态扩张）                                                          | 可能被CCIP等标准化协议优化                                                     |
+
+### ```Yul``` 与 ```OpCode``` 的区别
+| 特性         | Yul                          | OpCode                      |
+|--------------|------------------------------|-----------------------------|
+| 抽象级别     | 低级但可读                   | 最低级（二进制/十六进制）    |
+| 格式         | 类似汇编的文本格式           | 十六进制字节序列             |
+| 使用方式     | 可单独编写或嵌入 Solidity    | 直接由 EVM 执行             |
+| 可读性       | 相对较高                     | 非常低                      |
+| 编译关系     | 会被编译为 OpCode            | Yul 的编译结果              |
+| 开发用途     | 用于手动优化关键合约代码     | EVM 直接执行的机器指令       |
+| 语法结构     | 支持函数、变量等结构         | 纯线性指令序列               |
