--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -156,9 +156,14 @@ contract ContractA is ContractB {
     代码类型：属性
     返回类型: uint
     说明: 当前区块的基础费用（在EIP-1559后引入），决定了用户支付的交易费用的基准。
-    
 
 
+
+#### `gasleft()`
+- 返回当前上下文剩余的 `gas`，适合测试单元使用。
+
+
+---------------------------------------------------------------------------------
 
 #### 什么情况下，才会产生新区块
 - 当一笔交易被矿工打包进区块并添加到区块链中时，就会产生一个新的区块。
