add some function rules

--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -284,6 +284,65 @@ Person memory newPerson = Person(...);          是推荐的语法，Solidity 0.
 
 　
 
+#### 函数参数列表只需要类型信息即可
+- 在函数定义中，参数列表只需要类型信息即可，参数变量名是可选的。如果你`不打算在函数体内使用该参数，就可以省略变量名`。
+```solidity
+    function myFunction(uint256, address, bool) public {
+        // 函数体
+    }
+
+    function doSomething(uint256, string memory) public pure {
+        // 暂时不处理参数
+    }
+
+    interface MyInterface {
+        function transfer(address, uint256) external;
+    }
+    
+    // 事件
+    event MyEvent(uint256 indexed, address indexed, string memory data);
+```
+
+　
+
+#### 函数调用栈的参数最多占用 16 个槽位（slot）
+- 每个 Solidity 函数调用时，参数会被压入 EVM 的调用栈中。
+- EVM 规定：最多允许 16 个槽位用于函数参数传递。
+- 每个参数根据其类型可能占用 1 个或多个槽位。
+- 错误示例，如下：
+```solidity
+    contract Test {
+        // 这个函数有 17 个 uint 参数，每个占 1 个槽位 → 总共 17 个槽位
+        function tooManyParams(
+            uint a1, uint a2, uint a3, uint a4,
+            uint a5, uint a6, uint a7, uint a8,
+            uint a9, uint a10, uint a11, uint a12,
+            uint a13, uint a14, uint a15, uint a16,
+            uint a17
+        ) public pure {
+            // 编译错误！参数超过 16 个槽位
+            // Stack too deep when compiling inline assembly: Variable cannot be stored in the stack.
+        }
+    }
+```
+- 正确示例(当参数太多时，推荐使用 struct 来将参数打包成一个整体)，如下：
+```solidity
+    contract Test {
+        struct MyParams {
+            uint[17] values;
+        }
+    
+        function useStruct(MyParams calldata params) public pure returns (uint) {
+            uint sum = 0;
+            for (uint i = 0; i < 17; i++) {
+                sum += params.values[i];
+            }
+            return sum;
+        }
+    }
+```
+
+
 #### 固定长度数组的声明(同时初始化，可选)：
 ```
 uint[8] array0;
