--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -98,6 +98,8 @@
 - "MiniSolidity"的长度是11个字符。每个字符在UTF-8编码中占用1个字节，所以总长度是11字节。
 - ```"MiniSolidity" + 21个零字节```
 - ```0x4d696e69536f6c69646974790000000000000000000000000000000000000000```
+- byte32 转为 address：`address extractedAddress = address(uint160(uint256(bytes32Variable)));`
+- address 转为 byte32：`bytes32 bytes32Variable = bytes32(uint256(uint160(addressVariable)));`
 
 　
 
