--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -140,16 +140,21 @@
 - string 是一种动态长度的 Unicode(UTF-8编码) 字符串，用于存储文本数据。
 - string 是 bytes 的一个特殊形式，专门用于处理文本。
 - ```string message = "Hello, Solidity!";```
+- 关于比较两个string类型的变量
+  - Solidity 的 string 类型是动态数据类型，存储在存储（Storage）或内存（Memory）中。
+  - 直接 == 比较的是它们的存储指针，而不是内容。
+  - 即使 str1 和 str2 的内容相同，如果它们存储在不同的位置（比如一个是 storage，另一个是 memory），比较会返回 false。
+  - 正确做法：使用 `keccak256(abi.encodePacked(str))` 来比较字符串内容，而不是直接 == 比较。
 
 　
 
 #### 数组类型细说：
 ```
-uint[3] fixedSizeArray = [1, 2, 3];
-uint[] dynamicArray; 
-dynamicArray.push(1); 
-dynamicArray.push(2); 
-dynamicArray.push(3);
+    uint[3] fixedSizeArray = [1, 2, 3];
+    uint[] dynamicArray; 
+    dynamicArray.push(1); 
+    dynamicArray.push(2); 
+    dynamicArray.push(3);
 ```
 
 　
