--- a/courses/038 自动做市商_恒定乘积_推导0.md
+++ b/courses/038 自动做市商_恒定乘积_推导0.md
@@ -25,6 +25,8 @@
 -
 - $△y = \frac{(△x · y)}{(x + △x)}$
 -
+- $△x = \frac{(△y · x)}{(y - △y)}$ 
+-
 - 这里产生0.3%手续费，意思是，$△x$会缩减为$△x$ · 99.7%
 -
 - $△y = \frac{△x · (1 - 0.003) · y}{x + △x·(1 - 0.003)}$
@@ -34,3 +36,5 @@
 - $△y = \frac{△x · y · (\frac{997}{1000})}{x·(\frac{1000}{1000})  + △x·(\frac{997}{1000})}$
 -
 - $△y = \frac{△x · y · 997}{x · 1000 + △x · 997}$
+-
+- $△x = \frac{(△y · x)· 1000}{(y - △y) · 997}$ 
