--- a/courses/038 自动做市商_恒定乘积_推导0.md
+++ b/courses/038 自动做市商_恒定乘积_推导0.md
@@ -27,7 +27,7 @@
 -
 - $△x = \frac{(△y · x)}{(y - △y)}$ 
 -
-- 这里产生0.3%手续费，意思是，$△x$会缩减为$△x$ · 99.7%
+- 这里产生$0.3\%$手续费，意思是，$△x 会缩减为 △x · 99.7\%$
 -
 - $△y = \frac{△x · (1 - 0.003) · y}{x + △x·(1 - 0.003)}$
 -
