--- a/courses/008 接收以太币.md
+++ b/courses/008 接收以太币.md
@@ -50,4 +50,11 @@
 
 #### 其他说明：
 - 原生 ETH（以太币）的地址(以太坊地址常量)如下：
-- ```address public constant ethAddress = address(0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE);```
+    - ```address public constant ethAddress = address(0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE);```
+- 接口（interface）里不能写 payable，只要实现合约中函数是 payable 的，就可以接收 ETH。
+    - interface 中的函数默认可以接收 ETH
+    - interface 不允许写 payable 关键字（语法错误）
+    - 是否能接收 ETH，取决于 实际合约实现
+    - Solidity 官方文档说明：
+      - `"Functions in interfaces are implicitly virtual and can be overridden. They must be set to external. They cannot have an implementation. The payable keyword is not allowed in interfaces."`
+
