--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -60,6 +60,7 @@
 
 - 针对```msg.sender```举例子：
 - 当一个合约直接调用另一个合约的函数时（例如通过合约地址进行外部函数调用），通常```msg.sender```为上下文的本体。
+- 本质：不同的合约实例之间，进行`跨度`调用（`msg.sender`指向的上下文，则不同）。
 ```
 // 合约A（假如，外部账户调用合约A的fooA函数，为程序的发起点）
 function fooA() public {
@@ -84,8 +85,9 @@ function fooC() public {
 }
 ```
 
-- 针对```msg.sender```举例子（反直觉特例）：
+- 针对```msg.sender```举例子：
 - 当使用 super 进行函数调用时，不会改变当前的交易上下文或 msg.sender 的值。
+- 本质：相同的合约实例之间，进行`非跨度`调用（`msg.sender`指向的上下文，并未变化）。
 ```
 // 合约B
 contract ContractB {
@@ -104,6 +106,26 @@ contract ContractA is ContractB {
         return (senderInA, senderInB);
     }
 }
+```
+
+- 针对```msg.sender```举例子（反直觉例子）：
+- 当合约内部，使用`this`关键字调用内部函数，会改变当前的交易上下文或 msg.sender 的值。
+- 或，当合约内部，使用`address(this).call`调用内部函数，会改变当前的交易上下文或 msg.sender 的值。
+- 本质：一旦使用`this`关键字，则在指向的函数内，会认定`msg.sender == address(this)`。
+```
+    function isSelfSender() public returns (bool) {
+        return msg.sender == address(this);
+    }
+
+    function callSelf() public returns (bool) {
+        // 使用 functionName() 方式调用自己
+        return isSelfSender(); // isSelfSender 函数内，会认定`msg.sender == EOA`
+    }    
+    
+    function callThisSelf() public returns (bool) {
+        // 使用 this.functionName() 方式调用自己
+        return this.isSelfSender(); // isSelfSender 函数内，会认定`msg.sender == address(this)`
+    }
 ```
 
 
