--- a/others/005 一些对比.md
+++ b/others/005 一些对比.md
@@ -1,13 +1,13 @@
-### ```ABI、Calldata、Bytecode```
-| 特性        | ABI (Application Binary Interface)                          | Calldata (调用数据)                          | 字节码 (Bytecode)                          |
-|-------------|------------------------------------------------------------|---------------------------------------------|-------------------------------------------|
-| **定义**    | 合约与外部交互的接口规范，描述函数和事件的格式               | 实际调用合约时发送的二进制数据                | 合约的编译后机器码，EVM可执行的代码        |
-| **内容**    | JSON格式的函数签名、参数类型、返回值等                      | 函数选择器(4字节) + 参数编码(32字节/参数)     | 十六进制形式的EVM操作码                    |
-| **用途**    | 1. 指导如何编码/解码数据<br>2. 开发工具集成                 | 1. 合约函数调用的实际数据<br>2. 交易输入数据  | 1. 合约部署<br>2. EVM执行                  |
-| **生成方式** | 由Solidity编译器生成(artifact文件)                         | 根据ABI规范编码生成                          | Solidity源码编译生成                       |
-| **示例**    | ```json {"inputs":[...],"name":"transfer","outputs":[...]}``` | `0xa9059cbb00000...` (transfer函数调用数据)  | `0x60806040523480156...` (合约部署代码)    |
-| **可变性**  | 合约不变则ABI不变                                          | 每次调用根据参数不同而变化                    | 部署后不可变                               |
-| **可见性**  | 公开(需提供给调用者)                                       | 交易中可见                                    | 链上可查询(通过eth_getCode)                |
+### ```ABI、Calldata、Bytecode、CodeHash、InitCode/CreationCode```
+| 特性        | ABI (Application Binary Interface)                          | Calldata (调用数据)                          | 字节码 (Bytecode)                          | CodeHash                     | InitCode/CreationCode                      |
+|-------------|------------------------------------------------------------|---------------------------------------------|-------------------------------------------|-----------------------------------|-----------------------------------|
+| **定义**    | 合约与外部交互的接口规范，描述函数和事件的格式               | 实际调用合约时发送的二进制数据                | 合约的编译后机器码，EVM可执行的代码        | 合约字节码的Keccak256哈希值        | 部署时使用的初始化代码              |
+| **内容**    | JSON格式的函数签名、参数类型、返回值等                      | 函数选择器(4字节) + 参数编码(32字节/参数)     | 十六进制形式的EVM操作码                    | 64字符的十六进制哈希字符串         | 包含构造逻辑的临时部署代码          |
+| **用途**    | 1. 指导如何编码/解码数据<br>2. 开发工具集成                 | 1. 合约函数调用的实际数据<br>2. 交易输入数据  | 1. 合约部署<br>2. EVM执行                  | 1. 唯一标识合约代码<br>2. 验证代码 | 1. 合约部署流程<br>2. 工厂合约使用  |
+| **生成方式** | 由Solidity编译器生成(artifact文件)                         | 根据ABI规范编码生成                          | Solidity源码编译生成                       | 对字节码计算Keccak256哈希          | 编译器生成(含构造函数逻辑)          |
+| **示例**    | ```json {"inputs":[...],"name":"transfer","outputs":[...]}``` | `0xa9059cbb00000...` (transfer函数调用数据)  | `0x60806040523480156...` (合约部署代码)    | `0x1234...cdef`                   | `0x605560...363d3d373d3d3d...`     |
+| **可变性**  | 合约不变则ABI不变                                          | 每次调用根据参数不同而变化                    | 部署后不可变                               | 字节码不变则哈希不变               | 每次部署重新生成                   |
+| **可见性**  | 公开(需提供给调用者)                                       | 交易中可见                                    | 链上可查询(通过eth_getCode)                | 可通过节点API查询                 | 仅在部署交易中可见                 |
 
 ### ```permit、permit2```
 | 对比维度 | `permit` (EIP-2612) | `Permit2` |
