--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -65,7 +65,7 @@
 #### 下划线作为分隔符来编写整型
 - 所有的 uint 和 int 类型（以及它们的变体，如 uint256、int128 等）都可以使用下划线（_）作为分隔符来提高可读性。
 - 这种写法 不会影响存储或计算，纯粹是代码可读性优化。
-```
+```solidity
     uint256 public constant TOKEN_SUPPLY = 1_000_000_000; // 10亿
     uint256 public constant PRICE = 0.001_5 ether; // 0.0015 ETH
     uint256 public constant BLOCKS_PER_YEAR = 2_102_400; // 假设每年区块数
@@ -86,8 +86,8 @@
 - 1个字节 = 2个十六进制数(两个十六进制数，FF => 255)
 - 1个字节 = 3个十进制数(两个十进制数，99 => 99，不足以表达255；3个十进制数，999 => 999 足以表达)
 - 1个字节 = 3个八进制数(两个八进制数，77 => 63，不足以表达255；3个十进制数，777 => 511 足以表达)
-- 如，```0x1234567890123456789012345678901234567890```，十六进制表达方式，即40个值
-- 获取合约的地址，如，合约实例为 ```TargetContract target```，那么，它的地址为 ```address(target)```
+- 如，`0x1234567890123456789012345678901234567890`，十六进制表达方式，即40个值
+- 获取合约的地址，如，合约实例为 `TargetContract target`，那么，它的地址为 `address(target)`
 
 　
 
@@ -110,7 +110,7 @@
 - 如果把枚举当作返回值，则类型填枚举名(否则，编译错误)
 - 枚举定义中，切记最后一个值的末尾不能携带"逗号"，必须为空(否则，编译错误)
 - 枚举定义中，末尾的梅花括号不能携带"分号"，必须为空(否则，编译错误)
-```
+```solidity
     enum Status {
         InIdle,          // 0
         InProgress,      // 1
@@ -155,7 +155,7 @@
 　
 
 #### 数组类型细说：
-```
+```solidity
     uint[3] fixedSizeArray = [1, 2, 3];
     uint[] dynamicArray; 
     dynamicArray.push(1); 
@@ -180,7 +180,7 @@
 　
 
 #### 函数形式：
-```
+```solidity
 function <function name>(<parameter types>) {internal|external|public|private} [pure|view|payable] [returns (<return types>)]
 ```
 
@@ -192,7 +192,7 @@ function <function name>(<parameter types>) {internal|external|public|private} [
 ![](../images/etherscan_uni_00.png "")
 ![](../images/etherscan_uni_01.png "")
 - 与其他传统编程语言不同的是，合约声明了public变量，外界也无非直接访问存储变量本身。
-```
+```solidity
 // 声明一个mapping
 mapping(address => mapping(address => address)) public getPair;
 
@@ -265,7 +265,7 @@ contract Caller {
 　
 
 #### 函数形式示例：
-```
+```solidity
     function foo() public {
         //Nothing
     }
@@ -290,7 +290,7 @@ contract Caller {
 　
 
 #### 函数体内，创建结构体struct
-```
+```solidity
 Person memory newPerson = new Person({...});    是过时的语法，Solidity 0.8.x以前的版本使用
 Person memory newPerson = Person({...});        是推荐的语法，Solidity 0.8.x以及之后的版本使用
 Person memory newPerson = Person(...);          是推荐的语法，Solidity 0.8.x以及之后的版本使用
@@ -358,7 +358,7 @@ Person memory newPerson = Person(...);          是推荐的语法，Solidity 0.
 
 
 #### 固定长度数组的声明(同时初始化，可选)：
-```
+```solidity
 uint[8] array0;
 uint[3] array1 = [uint(1), 2, 3];   //如果不强转1，可能会编译不通过(编译器默认会把1识别int256)
 bytes1[5] array2;
@@ -368,7 +368,7 @@ address[100] array3;
 　
 
 #### 动态长度数组的声明(不可能同时初始化)：
-```
+```solidity
 uint[] array4;
 bytes1[] array5;
 address[] array6;
@@ -393,7 +393,7 @@ delete ary        //固定长度数组，把指定元素重置为默认值，数
 - 使用时机：仅需简化代码阅读，无需类型安全时（如临时局部变量）。
 - 无类型安全：Role 和 bytes32 可随意互换，编译器不会报错。
 - 易混用风险：若同时有多个别名（如 using TokenId for bytes32），可能错误传递数据。
-```javascript
+```solidity
   // 类型别名：仅为 bytes32 起一个别名 "Role"
   using Role for bytes32; // 仅名称替换，无新类型
    
@@ -412,7 +412,7 @@ delete ary        //固定长度数组，把指定元素重置为默认值，数
 - 使用实际：需区分语义的场景（如角色、ID、单位等），尤其是合约接口或公共函数参数。
 - 强制显式转换：必须通过 `wrap/unwrap` 操作，避免意外混用。
 - 编译时检查：传递错误类型（如 bytes32 代替 Role）会直接报错。
-```javascript
+```solidity
   // UDVT：创建独立类型 Role
   type Role is bytes32; 
    
