--- a/courses/002 变量与函数02_存储位置.md
+++ b/courses/002 变量与函数02_存储位置.md
@@ -8,7 +8,7 @@
 #### 其他:
 * mapping 无法被声明为 memory 或 calldata 类型，只能存在于 storage 中。
 #### 示例:
-```
+```solidity
 contract Example {
     string public myString; // 存储在 storage 中的状态变量，不得显性的编写storage关键字(否则，编译报错)  
     struct Person {
@@ -40,7 +40,7 @@ contract Example {
 #### 理解：
 * 当函数参数(或，函数局部变量)，是复杂类型（如，```string、array、struct、bytes```）时，它们必须使用 memory 关键字进行修饰。
 #### 示例:
-```
+```solidity
 function example(uint[] memory arr) public pure returns (uint sum) {
     for (uint i = 0; i < arr.length; i++) {
         if (arr[i] < 0) {
@@ -75,7 +75,7 @@ function example() public pure {
 * 必须是函数参数，参数可以是简单类型、也可以是负责类型。
 * 必须是```external```函数
 #### 示例：
-```
+```solidity
 function example(uint[] calldata arr) public pure returns (uint sum) {
     for (uint i = 0; i < arr.length; i++) {
         sum += arr[i];
@@ -103,7 +103,7 @@ function example(Person calldata person) public pure {
 * 每个函数调用的栈深度有限（1024 个槽位），所以存储在栈中的变量不能占用过多空间。
 * 当函数参数(或，函数局部变量)，是简单类型(```uint、int、uint、address、enum```)，则存储在栈（stack）中。
 #### 示例：
-```
+```solidity
 function example(uint value) public pure {
     // value参数存储在栈空间
 }
