--- a/courses/038 自动做市商_恒定乘积_推导0.md
+++ b/courses/038 自动做市商_恒定乘积_推导0.md
@@ -37,4 +37,14 @@
 -
 - $△y = \frac{△x · y · 997}{x · 1000 + △x · 997}$
 -
-- $△x = \frac{(△y · x)· 1000}{(y - △y) · 997}$ 
+- $△x = \frac{(△y · x)· 1000}{(y - △y) · 997}$
+
+#### 简化1
+- 描述：用户向协议支付金额为△x，得到△y
+- $x0·y0 = (x0 + △x)·(y0 - △y)$
+- $△y = \frac{(y0·△x)}{(x0 + △x)}$
+
+#### 简化2
+- 描述：用户向协议卖出金额为△y，得到△x
+- $x0·y0 = (x0 - △x)·(y0 + △y)$
+- $△x = \frac{(x0·△y)}{(y0 + △y)}$
