--- a/courses/020 ERC165标准.md
+++ b/courses/020 ERC165标准.md
@@ -1,73 +1,123 @@
+# ERC-165 标准：智能合约的接口识别协议
 
-#### 概念：
-- ERC165 是以太坊的一个重要标准，通过它，合约能够声明和识别接口，提高了以太坊生态系统中合约的互操作性和兼容性。
-- 任何实现了 supportsInterface(bytes4 interfaceId) 函数的合约都可以被视为遵循 ERC165 标准。
+## 核心问题与解决方案
 
-#### 主要特点：
-- 接口识别：合约通过实现 supportsInterface 函数，返回一个布尔值，指示其是否支持特定的接口。
-- 接口标识符：每个接口都有一个唯一的标识符（通常是一个 bytes4 类型的值），由接口的函数签名生成。通过这些标识符，外部合约可以确认目标合约是否支持特定功能。
-- 灵活性：ERC165 使合约能够向外部系统声明其功能，从而促进合约间的交互与兼容性。
+**要解决的问题**：在以太坊中，如何让一个合约**可靠地检测**另一个合约实现了哪些功能接口？
 
-#### 应用场景：
-- 代币标准（如 ERC721 和 ERC1155）：在 NFT 和其他代币合约中，ERC165 用于验证支持的接口，使得合约能够更好地与外部应用程序（如钱包、市场等）互动。
-- 合约互操作性：通过使用 ERC165，开发者可以创建更具互操作性的合约，允许它们识别和调用其他合约的功能。
+**ERC-165 的答案**：通过标准化的接口查询函数，让合约能够"声明身份"并接受"身份验证"。
 
-#### 总结：
-- ERC165 标准是在 2018-01-23 提出的。它的目的是为智能合约提供一种标准化的方式，以声明它们支持哪些接口。
-- ERC165 标准由 Louis Garnier 提出，旨在增强合约的互操作性，确保不同合约和应用程序之间可以可靠地检测接口支持。
+## 核心机制
 
-　
+### 1. 接口标识符（Interface ID）
+- 每个接口都有一个唯一的 4 字节标识符
+- 计算方式：接口内所有函数签名的 `bytes4(keccak256)` 的**异或值**
+- 声明示例：
+  ```solidity
+  // ✅ 常量、自动计算接口的标识符（即，所有函数选择器的 XOR）
+  bytes4 public constant IERC165_ID = type(IERC165).interfaceId;
+  
+  // ⚠️ 常量、硬编码（可读性差，易出错）
+  bytes4 public constant IERC165_ID = 0x01ffc9a7; // 可读性差，易出错
+  
+  // ⚠️ 常量、手动计算（复杂且易漏函数，易出错）
+  bytes4 public constant IERC165_ID = bytes4(keccak256('supportsInterface(bytes4)'));
+  ```
 
----------------------------------------------------------------------------------------
+### 2. 强制性实现规则
 
-　
+**关键规定**：任何声称支持 ERC-165 的合约，**必须**在查询 `0x01ffc9a7`(即，`(type(IERC165).interfaceId)`) 时返回 `true`。
 
-#### 示例：
-```
-interface IERC165 {
-    // "支持接口声明函数"
-    function supportsInterface(bytes4 interfaceId) external view returns (bool);
+这意味着：
+```solidity
+// 正确的实现 ✅
+function supportsInterface(bytes4 interfaceId) external view returns (bool) {
+    return interfaceId == type(IERC165).interfaceId || 
+           interfaceId == MY_INTERFACE_ID;
 }
 
-contract ExampleContract is IERC165 {
-    // ERC165标识符
-    bytes4 private constant INTERFACE_ID_EXAMPLE = 0x12345678;
+// 错误的实现 ❌ （违反标准！）
+function supportsInterface(bytes4 interfaceId) external view returns (bool) {
+    return interfaceId == MY_INTERFACE_ID; // 缺少对 type(IERC165).interfaceId 的支持
+}
+```
 
-    function supportsInterface(bytes4 interfaceId) external view override returns (bool) {
-        return interfaceId == INTERFACE_ID_EXAMPLE;
+## 实际应用模式
+
+### 基础合约实现
+```solidity
+import "@openzeppelin/contracts/utils/introspection/IERC165.sol";
+
+contract MyContract is IERC165 {
+    bytes4 private constant _INTERFACE_ID_MYFEATURE = 0xabcd1234;
+    
+    function supportsInterface(bytes4 interfaceId) 
+        external 
+        view 
+        override 
+        returns (bool) 
+    {
+        return interfaceId == type(IERC165).interfaceId || 
+               interfaceId == _INTERFACE_ID_MYFEATURE;
     }
 }
 ```
 
-　
-
----------------------------------------------------------------------------------------
-
-　
-
-#### 示例：
-```
-interface IERC20 {
-    function supportsInterface(bytes4 interfaceId) external view returns (bool);
-}
-
-contract ERC20Token is IERC20 {
-    // 省略实现细节
-    function supportsInterface(bytes4 interfaceId) external view override returns (bool) {
-        return interfaceId == type(IERC20).interfaceId;
+### 复杂合约的多接口支持
+```solidity
+contract NFTContract is IERC165, IERC721, IERC721Metadata {
+    function supportsInterface(bytes4 interfaceId) 
+        external 
+        view 
+        override 
+        returns (bool) 
+    {
+        return
+            interfaceId == type(IERC165).interfaceId ||
+            interfaceId == type(IERC721).interfaceId || 
+            interfaceId == type(IERC721Metadata).interfaceId;
     }
 }
-
-function buyToken(address tokenContract, address buyer, uint256 amount) external {
-    /*
-        用户A调用该函数：
-        如果代币合约遵循了IERC20标准，则用户A转账给用户buyer一些代币。
-    */
-
-    // 检查是否支持 ERC20 接口
-    require(IERC20(tokenContract).supportsInterface(type(IERC20).interfaceId), "Not an ERC20 token");
-
-    // 调用 ERC20 的 transfer 函数
-    IERC20(tokenContract).transfer(buyer, amount);
-}
 ```
+
+### 简单使用示例
+```solidity    
+    function buyToken(address tokenContract, address buyer, uint256 amount) external {
+        /*
+            用户A调用该函数：
+            如果代币合约遵循了IERC20标准，则用户A转账给用户buyer一些代币。
+        */
+	
+	    // 1. 先检查合约是否支持 ERC-165（递归检测基础）
+        require(
+            IERC165(tokenContract).supportsInterface(type(IERC165).interfaceId),
+            "Target does not support ERC165"
+        );
+	
+        // 2. 再检查是否支持 ERC-20 接口
+        require(
+            IERC165(tokenContract).supportsInterface(type(IERC20).interfaceId),
+            "Not an ERC20 token"
+        );
+    
+        // 调用 ERC20 的 transfer 函数
+        IERC20(tokenContract).transfer(buyer, amount);
+    }
+```
+
+## 为什么必须支持 `0x01ffc9a7`？
+
+这避免了**自相矛盾**的逻辑：
+- 你通过实现 `supportsInterface` 函数，隐式声明"我支持 ERC-165"
+- 但当别人验证时 (`supportsInterface(0x01ffc9a7)`)，你却否认
+- 这就好比说"我会说英语"，但当别人用英语问你"你会说英语吗？"时，你却回答"听不懂"
+
+## 在生态系统中的重要性
+
+1. **钱包和市场**：检测 NFT 是否支持元数据接口
+2. **DeFi 协议**：验证预言机适配器支持的功能
+3. **合约工厂**：确保部署的合约具备预期接口
+4. **升级模式**：验证新版本合约保持接口兼容性
+
+## 总结
+
+ERC-165 不是可选的装饰，而是**严肃的身份声明协议**。正确实现它的第一条规则就是：**必须对自身的接口ID (`0x01ffc9a7`) 返回 `true`**。忽略这一条就相当于违反了最基本的协议约定，会导致合约在生态系统中被识别为"不兼容"。
