--- a/courses/038 自动做市商_恒定乘积_推导0.md
+++ b/courses/038 自动做市商_恒定乘积_推导0.md
@@ -27,7 +27,7 @@
 -
 - $△x = \frac{(△y · x)}{(y - △y)}$ 
 -
-- 这里产生$0.3\%$手续费，意思是，$△x 会缩减为 △x · 99.7\%$
+- 用户支付的 $△x$​​ 的 ​​0.3%​​ 会被留在资金池中，剩下的 ​​99.7%​​ 才真正用于兑换。
 -
 - $△y = \frac{△x · (1 - 0.003) · y}{x + △x·(1 - 0.003)}$
 -
@@ -37,7 +37,7 @@
 -
 - $△y = \frac{△x · y · 997}{x · 1000 + △x · 997}$
 -
-- $△x = \frac{(△y · x)· 1000}{(y - △y) · 997}$
+- $一般不会用到：△x = \frac{(△y · x)· 1000}{(y - △y) · 997}$
 
 #### 简化1
 - 描述：用户向协议支付金额为△x，得到△y
