--- a/courses/020 ERC165标准.md
+++ b/courses/020 ERC165标准.md
@@ -120,4 +120,5 @@ contract NFTContract is IERC165, IERC721, IERC721Metadata {
 
 ## 总结
 
-ERC-165 不是可选的装饰，而是**严肃的身份声明协议**。正确实现它的第一条规则就是：**必须对自身的接口ID (`0x01ffc9a7`) 返回 `true`**。忽略这一条就相当于违反了最基本的协议约定，会导致合约在生态系统中被识别为"不兼容"。
+- ERC-165 不是可选的装饰，而是**严肃的身份声明协议**。正确实现它的第一条规则就是：**必须对自身的接口ID (`0x01ffc9a7`) 返回 `true`**。忽略这一条就相当于违反了最基本的协议约定，会导致合约在生态系统中被识别为"不兼容"。
+- ERC-165 是`检测接口`的基础设施，属于`反射机制`。
