--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -20,42 +20,42 @@
 　
 
 #### 计算"函数选择器"的公式：
-```
+```solidity
 bytes4 data = bytes4(keccak256("functionName(paramType1,paramType2...)"))
 ```
 
 　
 
 #### 计算示例(携带基础类型参数)：
-```
+```solidity
 bytes4 data = bytes4(keccak256("functionName(uint256,bool)"))
 ```
 
 　
 
 #### 计算示例(携带固定长度类型参数)：
-```
+```solidity
 bytes4 data = bytes4(keccak256("functionName(uint256[3])"))
 ```
 
 　
 
 #### 计算示例(携带可变长度类型参数)：
-```
+```solidity
 bytes4 data = bytes4(keccak256("functionName(uint256[],string)"))
 ```
 
 　
 
-#### 计算示例(携带映射类型参数：(地址类型，struct类型，枚举类型))：
-```
+#### 计算示例(携带映射类型参数：(地址类型，struct类型(必须展开子变量)，枚举类型))：
+```solidity
 bytes4 data = bytes4(keccak256("functionName(address,(uint256,bytes),uint8)"))
 ```
 
 　
 
 #### 注意：在目标函数没有发生重载的情况下，完全等价于以下：
-```
+```solidity
 bytes4 data = this.functionName.selector;
 ```
 
@@ -69,22 +69,22 @@ bytes4 data = this.functionName.selector;
 - 使用selector进行调用目标合约的函数(详见：016 abi编码相关.md)
 
 #### 四种方式如下：
-```
+```solidity
     // 使用[函数签名]和[参数编码数据]，调用目标函数
     bytes memory data = abi.encodeWithSignature("doSomething(uint256,bool)",123,true);
     (bool success1, bytes memory data1) = address(targetContract).call(data);
 ```
-```
+```solidity
     // 使用[函数选择器]和[参数编码数据]，调用目标函数
     bytes4 memory data = this.functionName.selector;
     (bool success1, bytes memory data1) = address(targetContract).call(abi.encodeWithSelector(data, 123, true));
 ```
-```
+```solidity
     // 使用[函数选择器]和[参数编码数据]，调用目标函数
     bytes4 memory data = bytes4(keccak256("doSomething(uint256,bool)"))
     (bool success1, bytes memory data1) = address(targetContract).call(abi.encodeWithSelector(data, 123, true));
 ```
-```
+```solidity
     // 使用，在doSomething函数内，使用msg.sig获取函数选择器
     // 特例：当fallback函数，作为"当调用一个不存在的函数"时，此时msg.sig指向的是"那个不存在的函数的选择器"
     function doSomething(uint256 value, bool flag) {
@@ -95,7 +95,7 @@ bytes4 data = this.functionName.selector;
 #### 函数选择器冲突：
 - 函数选择器冲突：指的是一个合约中，存在两个或以上的函数，具备相同的函数选择器。
 - 举例子：两个函数的名称与参数完全一致，但返回值不一致。那么，它们也算作是冲突！
-```
+```solidity
 contract Example {
     function getNumber() public pure returns (uint256) {
         return 42;
@@ -110,7 +110,7 @@ contract Example {
 #### 接口的 interfaceId
 - 一个接口中，把所有函数的函数选择器进行编码后得到的bytes4。
 - 过程大概如下：
-```
+```solidity
 bytes4 interfaceId = bytes4(keccak256(abi.encodePacked(
     bytes4(keccak256(bytes(signature1))),
     bytes4(keccak256(bytes(signature2))),
@@ -131,3 +131,13 @@ bytes4 interfaceId = bytes4(keccak256(abi.encodePacked(
 
 #### 编程范例
 - 详见(contract/TestFunctionSelector.sol)
+
+#### 示例截图：
+```solidity
+    function getAggregate3ValueSelector_2() public pure returns (bytes4) {
+        // 正确打印（结构体展开）
+        return bytes4(keccak256("aggregate3Value((address,bool,uint256,bytes)[])"));
+    }
+```
+- 使用在线网站计算：https://emn178.github.io/online-tools/keccak_256.html
+  ![](../images/PixPin_20251115_215006.png "")
