--- a/courses/007 继承.md
+++ b/courses/007 继承.md
@@ -13,7 +13,7 @@
 //////////////////////////////////////////////////////////////////////
 
 ##### 单一继承实例：
-```
+```solidity
 contract Grandfather {
     function sayHello() public pure virtual returns (string memory) {
         return "Hello from Grandfather!";
@@ -35,7 +35,7 @@ contract Son is Father {
 
 //////////////////////////////////////////////////////////////////////
 
-```
+```solidity
 多重(钻石)继承实例：
 
     Grandfather
@@ -91,7 +91,7 @@ contract Son is Father, Mother {
 //////////////////////////////////////////////////////////////////////
 
 #### 接口与继承的特殊示例
-```
+```solidity
     // SPDX-License-Identifier: MIT
     pragma solidity ^0.8.0;
     
@@ -132,4 +132,34 @@ contract Son is Father, Mother {
             // string memory storageValue = hello.greeting;  // 编译错误
         }
     }
+```
+
+//////////////////////////////////////////////////////////////////////
+
+#### 多重继承的显式重写语法。
+- **必须列出所有**：需要列出所有定义了该函数的父合约或接口
+- **顺序无关**：括号内的顺序不重要
+- **包括直接和间接**：如果父合约本身也继承了其他合约，也需要考虑
+```solidity
+// 两个有相同函数的接口
+interface IERC20 {
+    function transfer(address to, uint256 amount) external returns (bool);
+}
+
+interface IERC20Extended {
+    function transfer(address to, uint256 amount) external returns (bool);
+}
+
+// 合约需要同时 override 两个接口
+contract MyToken is IERC20, IERC20Extended {
+    // 必须同时 override 两个接口
+    function transfer(address to, uint256 amount) 
+        public 
+        override(IERC20, IERC20Extended)  // <----------------------
+        returns (bool) 
+    {
+        // 实现逻辑
+        return true;
+    }
+}
 ```
